Replying with part of original message selected quotes entire message instead of selection only
Categories
(Thunderbird :: Message Compose Window, defect, P2)
Tracking
(thunderbird_esr102 unaffected, thunderbird111 wontfix, thunderbird112+ verified)
Tracking | Status | |
---|---|---|
thunderbird_esr102 | --- | unaffected |
thunderbird111 | --- | wontfix |
thunderbird112 | + | verified |
People
(Reporter: mkmelin, Assigned: darktrojan)
References
Details
(Keywords: regression, Whiteboard: [Supernova3p])
Attachments
(1 file, 1 obsolete file)
Broken by the 3pane changes.
When you have a part of the message selected and press reply, the quoted part ONLY should go into the reply.
Reporter | ||
Updated•2 years ago
|
Comment 1•2 years ago
|
||
Confirming for 112.0a1 (2023-02-27) (64-bit), Win10.
STR
- In 3pane, select a message, then select some, but not all text in that message
- Trigger Reply
Actual
- Complete original message gets quoted in the reply
Expected
- Only the selected text of the original message should get quoted, with attribution line (as in 102)
Comment 2•2 years ago
|
||
Common workflow issue, so very much wanted. But there is a workaround
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 5•2 years ago
|
||
Drive-by comment: Looks like code added by bug 507541 to check that the selection comes from the message being replied to is removed here. Equally, code fixing bug 597369 is removed here. The charset override should still be used when replying to a message whose charset was repaired previously (for example: message in windows-1252 incorrectly declared as UTF-8 being repaired and replied to).
Assignee | ||
Comment 7•2 years ago
|
||
(In reply to PS from comment #6)
Drive-by comment: Looks like code added by bug 507541 to check that the selection comes from the message being replied to is removed here.
You can't right-click reply to an unselected message any more.
Equally, code fixing bug 597369 is removed here. The charset override should still be used when replying to a message whose charset was repaired previously (for example: message in windows-1252 incorrectly declared as UTF-8 being repaired and replied to).
The removed code doesn't work. I'm looking to see if I need to replace it or not. A lot has changed since that bug was fixed.
Assignee | ||
Comment 8•2 years ago
|
||
Depends on D171833
(In reply to Geoff Lankow (:darktrojan) from comment #7)
The removed code doesn't work. I'm looking to see if I need to replace it or not. A lot has changed since that bug was fixed.
Thanks for the reply. The intent of this code was to cater for this case:
Display message 1, repair charset, switch off message preview, select message 2, reply. The bug was the the repaired charset from message 1 was used in the reply to message 2.
Assignee | ||
Comment 10•2 years ago
|
||
That should not be possible now, although I did originally forget to check whether the message pane was open or not, which would've caused other problems too.
Comment 11•2 years ago
|
||
Comment on attachment 9321560 [details]
Bug 1818683 - Pass character set auto-detection to the back end when replying. r=mkmelin
Revision D171834 was moved to bug 1820716. Setting attachment 9321560 [details] to obsolete.
Comment 12•2 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/92870c10055a
Pass selection to the back end when replying. r=mkmelin
Comment 13•2 years ago
|
||
v.fixed, modulo Bug 1822737 - When replying, the entire message is quoted if you do not select more than at least one word.
Updated•2 years ago
|
Comment 14•1 year ago
|
||
I just tried this partial quoting in Daily.
Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/118.0 Thunderbird/118.0a1
Name Thunderbird
Version 118.0a1
Build ID 20230812105055
What I found is text messages quote correctly with the partial selection but HTML message, at least where the selection is in a table, are quoted in their entirety. (My example in a table was a Google security alert.)
Is that this bug, or a new regression?
Description
•