Bug 1818683 - Pass selection to the back end when replying. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D171813

--HG--
extra : amend_source : 052c8b4381bf629b478ff6d4a2312bcdfe1cf3ae